menambahkan beberapa event, yaitu event untuk bars dan event untuk icon X, dan memperbaiki event aksi di section 1

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,31 @@ body {
     transform: scale(1);
 }
 
+/* icon X */
+.container-header .list-header .icon-x-list-header {
+    transform: scale(0);
+}
+
+
+/* BARS */
+.container-header .bars-header {
+    position: absolute;
+    left: 2%;
+    top: 20%;
+    transform: scale(0);
+}
+
+.container-header .bars-header i {
+    color: white;
+    font-size: 1.8rem;
+}
+
+
+.container-header .bars-header.bars-header-active {
+    transform: scale(1);
+}
+
+
 
 /* TITLE */
 .container-header .title-header .h3-title-header {
@@ -283,8 +308,7 @@ body {
     /* LIST HEADER */
     .container-header .header .list-header {
         width: 250px;
-        height: 99vh;
-        bottom: -94vh;
+        height: 100vh;
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -294,7 +318,14 @@ body {
         margin-left: 0;
         font-size: 0.9rem;
         left: -100%;
+        top: 0%;
+        transition: .5s;
     }
+    /* list header active */
+    .container-header .header .list-header.list-header-active {
+        left: 0%;
+    }
+
     .container-header .header .list-header a{
         margin-left: 0%;
         margin-top: 0%;
@@ -322,6 +353,29 @@ body {
         transform: scale(1);
     }
 
+    /* icon X */
+    .container-header .list-header .icon-x-list-header {
+    color: black;
+    font-size: 1.5rem;
+    margin-bottom: 10%;
+    margin-top: 8%;
+    margin-left: 87%;
+    transform: scale(0);
+   
+    }
+    .container-header .list-header .icon-x-list-header.icon-x-list-header-active {
+    transform: scale(1);
+    }
+
+    .animasi-icon-x-list-header {
+        animation-name: iconX;
+        animation-duration: 1s;
+    }
+
+    @keyframes iconX {
+        from {transform: rotate(0deg);}
+        to {transform: rotate(360deg);}
+    }
 
     .section-1 {
         min-height: 97vh;
