--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
     background-image: linear-gradient(to right, var(--cyan-custom), var(--blue-custom));
     position: relative;
     box-shadow: 0px 0px 90px rgba(255, 255, 255, 0.5);
+    z-index: 100;
 }
 
 .container-header .header::before {
@@ -134,7 +135,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-right: 9%;
-   
+
 }
 
 .container-search-unduh .search-header i {
@@ -144,7 +145,7 @@ body {
     font-size: 0.8rem;
     border: solid 1px white;
     padding: 4%;
-    z-index: 2;
+    z-index: 1;
 }
 
 
@@ -320,6 +321,7 @@ body {
         left: -100%;
         top: 0%;
         transition: .5s;
+        z-index: 1000;
     }
     /* list header active */
     .container-header .header .list-header.list-header-active {
@@ -378,8 +380,73 @@ body {
     }
 
     .section-1 {
-        min-height: 97vh;
-        background-color: white;
+        min-height: 120vh;
+        align-items: start;
+        flex-direction: column;
+    }
+
+    .section-1 .text-section-1 {
+        margin-top: 20%;
+    }
+
+    .section-1 .text-section-1 .title-section-1 {
+        width: 200%;
+    }
+
+    /* keterangan section 1 */
+    .text-section-1 .keterangan-section-1 {
+        width: 290%;
+    }
+
+    /* aksi section */
+    .section-1 .text-section-1 .aksi-section-1 {
+        margin-left: 0%;
+        margin-top: 20%;
+        width: 190%;
+    }
+
+    .section-1 .text-section-1 .aksi-section-1 .a-aksi-section-1 {
+        font-size: .9rem;
+    }
+
+    /* unduh */
+    .container-header .header .container-search-unduh .unduh-header{
+        margin-left: -100%;
+        padding-right: 4%;
+    }
+
+    /* icon search header */
+    .container-header .header .container-search-unduh .search-header .icon-search-header {
+        margin-left: -21%;
+    }
+
+    /* input search header */
+    .container-search-unduh .search-header .input-search-header {
+        transform: translateY(-120%);
+        margin-left: -39%;
+        opacity: 0;
+    }
+    
+    .container-search-unduh .search-header .input-search-header.input-search-header-active {
+        transform: translateY(120%);
+        opacity: 1;
+    }
+    
+    .container-search-unduh .search-header .input-search-header.input-search-header-hidden {
+        transform: translateY(-120%);
+        opacity: 0;
+    }
+
+    /* title header */
+    .container-header .header .title-header .h3-title-header {
+        padding-left: 62%;
+    }
+    .title-section-1 h3{
+        font-size: 2.7rem;
+    }
+    /* thumbnail section 1 */
+    .section-1 .thumbnail-section-1 img {
+        width: 100%;
     }
 }
 
