--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,14 @@ body {
     position: relative;
     box-shadow: 0px 0px 90px rgba(255, 255, 255, 0.5);
     z-index: 100;
+    transform: translateY(-100%);
+    opacity: 0;
+    transition: 1s;
+}
+/* header active */
+.container-header .header.header-active {
+    transform: translateY(0%);
+    opacity: 100;
 }
 
 .container-header .header::before {
@@ -68,6 +76,18 @@ body {
     align-items: center;
     margin-left: 7%;
     font-size: 0.9rem;
+    opacity: 0;
+    transition: 2s;
+    transform: translateY(-100%);
+}
+
+.section-1 .thumbnail-section-1.content-active,
+.section-1 .text-section-1.content-active,
+.container-header .header .container-search-unduh.content-active,
+.container-header .header .title-header.content-active,
+.container-header .header .list-header.content-active {
+    opacity: 1;
+    transform: translateY(0%);
 }
 
 .list-header a {
@@ -115,6 +135,12 @@ body {
 
 
 /* TITLE */
+.container-header .title-header {
+    transform: translateY(-100%);
+    transition: 2s;
+    opacity: 0;
+}
+
 .container-header .title-header .h3-title-header {
     font-family: "Mochiy Pop One", sans-serif;
     color: white;
@@ -128,7 +154,9 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-right: 7%;
- 
+    opacity: 0;
+    transition: 2s;
+    transform: translateY(-100%);
 }
 
 
@@ -221,6 +249,9 @@ body {
     justify-content: start;
     align-items: start;
     flex-direction: column;
+    transform: translate(-20%, -30%);
+    opacity: 0;
+    transition: 1.2s;
 }
 
 /* TITLE */
@@ -302,6 +333,9 @@ body {
 
 .section-1 .thumbnail-section-1 {
     margin-right: -16%;
+    transform: translate( 20%, -30%);
+    opacity: 0;
+    transition: 1.2s;
 }
 
 .section-1 .thumbnail-section-1 img {
